src/test/deca/context/invalid/sansObjet/BadTestprintln.deca
{
  int a = 0;
  float b = 7;
  println(a + b);
  println(a % a);
  println(b % b);
  println(a - "ss");

}
